kubernetes/firefly/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: firefly
spec:
  selector:
    app: firefly-app
  ports:
    - port: 8080
      name: web
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: firefly-ingress
spec:
  rules:
    - host: firefly.astrid.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: firefly
                port:
                  number: 8080
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: firefly
spec:
  serviceName: firefly
  replicas: 1
  selector:
    matchLabels:
      app: firefly-app
  template:
    metadata:
      labels:
        app: firefly-app
    spec:
      containers:
        - name: app
          image: registry.hub.docker.com/jc5x/firefly-iii:latest
          resources:
            limits:
              cpu: 1000m
              memory: 500Mi
          volumeMounts:
            - name: upload
              mountPath: /var/www/html/storage/upload
          ports:
            - containerPort: 8080
  volumeClaimTemplates:
    - metadata:
        name: upload
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 10Gi
