kubernetes/firefly/firefly.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: firefly-app
spec:
  selector:
    app: firefly-app
  ports:
    - port: 80
      targetPort: http
      name: http
      appProtocol: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: firefly-ingress
spec:
  rules:
    - host: firefly.s.astrid.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: firefly-app
                port:
                  name: http
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: firefly-app
spec:
  serviceName: firefly-app
  replicas: 1
  selector:
    matchLabels:
      app: firefly-app
  template:
    metadata:
      labels:
        app: firefly-app

    spec:
      containers:
        - name: app
          image: registry.hub.docker.com/jc5x/firefly-iii:latest
          resources:
            limits:
              cpu: 200m
              memory: 256Mi
          env: # see https://github.com/firefly-iii/firefly-iii/blob/main/.env.example
            - name: TZ
              value: America/Los_Angeles
            - name: SITE_OWNER
              value: astrid@astrid.tech
            - name: APP_LOG_LEVEL
              value: info

              # Get database credentials and URL from KubeDB
            - name: DB_HOST
              value: firefly-db
            - name: DB_PORT
              value: "3306"
            - name: DB_CONNECTION
              value: mysql
            - name: DB_DATABASE
              value: mysql
            - name: DB_USERNAME
              valueFrom:
                secretKeyRef:
                  name: firefly-db-auth
                  key: username
            - name: DB_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: firefly-db-auth
                  key: password

              # User-provided (or terraform-generated) app key
            - name: APP_KEY
              valueFrom:
                secretKeyRef:
                  name: firefly-app-key
                  key: APP_KEY

          volumeMounts:
            - name: upload
              mountPath: /var/www/html/storage/upload
          ports:
            - containerPort: 8080
              name: http

  volumeClaimTemplates:
    - metadata:
        name: upload
      spec:
        storageClassName: longhorn
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 2Gi
